# ComputerScience

./: .gitignore  1stat.c  2.1write.c  2.2write.c  3.1copy.c  3.2copy.c  4copy.c  5fchown.c  CMakeLists.txt  FILE_COUNTER.txt  Makefile  README.md  XtrCopy.c
01-Stat/: 01-Stat  01-Stat.c  Makefile
02-Write/: 02.1-Write  02.1-Write.c  02.2-Write  02.2-Write.c  Makefile
02.1-Write/: 02.1-Write.c
02.2-Write/: 02.2-Write.c
03-CopyEntries/: 03.1-Copy  03.1-Copy.c  03.2-Copy  03.2-Copy.c  03.STAR-Copy  03.STAR-Copy.c  Makefile
03.1-Copy/: 03.1-Copy.c
03.2-Copy/: 03.2-Copy.c
03.STAR-Copy/: 03.STAR-Copy.c
04-Copy/: 04-Copy.c
04-CopyPerm/: 04-Copy  04-Copy.c  Makefile
05-CopyOwn/: 05-Fchown  05-Fchown.c  Makefile
05-Fchown/: 05-Fchown.c
06-Readdir/: 06.1-Readdir  06.1-Readdir.c  06.2-Readdir  06.2-Readdir.c  06.3-Getdents  06.3-Getdents.c  06.4-Recursive6.2  06.4-Recursive6.2.c  Makefile
06.1-Readdir/: 06.1-Readdir.c
06.2-Readdir/: 06.2-Readdir.c
06.3-Getdents/: 06.3-Getdents.c
06.4-Recursive6.2/: 06.4-Recursive6.2.c
07-CopyDir/: 07.2-CopyDir.c  Makefile
08-Filefrag/: 08-filefrag.c  Makefile
09-Statvfs/: 09-Statvfs.c  Makefile  README.md
10-Inotify/: 10-Inotify.c  10-Inotify_CRT_DEL.c  Makefile  README.md
11-Flock/: 11-Flock.c  Makefile
12-ProcessInfo/: .README.md.swp  12-Id.c  12-ProcInfo.c  12-ProcInfoSelf.c  Makefile  README.md
13-Wait/: 13.1-Wait.c  13.2-pidfd_open.c  13.2-ptrace.c  Makefile  README.md
14-Integrate/: 14-Integrate.c  14-IntegrateThreads.c  Makefile  README.md
15-Signals/: 15.1-Sigaction.c  15.2-Termination10.c  15.2-Termination10_CRT_DEL.c  15.STAR-SigReader.c  15.STAR-SigSender.c  Makefile  README.md
16-MsgQueue/: 16-MsgQueue.c  Makefile
17-Queue/: 17-QueueReader.c  17-QueueSender.c  Makefile
18-dlopen/: 18-dlopen.c  Makefile  README.md
19-Threads/: 19.1-Mutex.c  19.2-semaphores_1.c  19.3-semaphores_2.c  19.4-atomic.c  19.6-OpenMP.c  Makefile
20-Mmap/: 20.0.c  20.1-Client.c  20.1-Server.c  20.2-Encryption.c  Makefile  README.md
21-Udp/: udp-client.py  udp-server.py
22-Tcp/: tcp-client.py  tcp-server.py
